--- a/WydatkiBase/res/layout/row_parameter_layout.xml
+++ b/WydatkiBase/res/layout/row_parameter_layout.xml
@@ -15,12 +15,12 @@
 
         <CheckBox
             android:id="@+id/row_cbx_selected"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_margin="4dp"
             android:focusable="false"
             android:focusableInTouchMode="false"
-            android:visibility="gone" />
+            android:visibility="visible" />
     </LinearLayout>
 
     <ImageView
