Dodanie widoku transakcji

--- a/WydatkiBase/res/layout/fragment_accounts_list.xml
+++ b/WydatkiBase/res/layout/fragment_accounts_list.xml
@@ -17,6 +17,7 @@
             android:layout_height="match_parent"
             android:layout_weight="0.33"
             android:background="@color/btn_blue"
+            android:onClick="btnNewTransaction_Click"
             android:text="Nowa transakcja" />
 
         <Button
@@ -26,6 +27,7 @@
             android:layout_height="match_parent"
             android:layout_weight="0.33"
             android:background="@color/btn_blue"
+            android:onClick="btnNewTransfer_Click"
             android:text="Nowy przelew" />
 
         <Button
