--- a/WydatkiPhone/res/layout/activity_transaction.xml
+++ b/WydatkiPhone/res/layout/activity_transaction.xml
@@ -14,14 +14,14 @@
         android:background="@color/background_orange" >
 
         <ImageButton
-            android:id="@+id/imageButton1"
+            android:id="@+id/ib_addView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="btnAddView_Click"
             android:src="@android:drawable/ic_input_add" />
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/ib_removeView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="btnRemoveView_Click"
