--- a/WydatkiBase/res/layout/fragment_transaction_layout.xml
+++ b/WydatkiBase/res/layout/fragment_transaction_layout.xml
@@ -7,9 +7,10 @@
 
     <ListView
         android:id="@+id/invoke_transactions_listview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:cacheColorHint="@color/transparent" >
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:cacheColorHint="@color/transparent"
+        android:choiceMode="singleChoice" >
 
     </ListView>
 
