--- a/WydatkiPhone/res/layout/activity_object_manager.xml
+++ b/WydatkiPhone/res/layout/activity_object_manager.xml
@@ -3,6 +3,7 @@
     android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/app_background_dark"
     tools:context=".ObjectManager" >
 
     <!--
