--- a/WydatkiPhone/res/layout/activity_transaction.xml
+++ b/WydatkiPhone/res/layout/activity_transaction.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rr_l"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@drawable/app_background_dark" >
 
     <LinearLayout
         android:id="@+id/linearLayout1"
@@ -11,7 +12,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:background="@color/background_orange" >
+        android:background="@color/background_orange"
+        android:visibility="gone" >
 
         <ImageButton
             android:id="@+id/ib_addView"
