--- a/WydatkiPhone/res/layout/edit_element_activity_layout.xml
+++ b/WydatkiPhone/res/layout/edit_element_activity_layout.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/app_background_dark"
+    android:orientation="horizontal" >
 
     <FrameLayout android:id="@+id/details" android:layout_weight="1"
             android:layout_width="0px" android:layout_height="match_parent" />
