--- a/WydatkiPhone/res/menu/activity_transaction.xml
+++ b/WydatkiPhone/res/menu/activity_transaction.xml
@@ -1,9 +1,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+     <item
+        android:id="@+id/menu_save"
+        android:showAsAction="always|withText"
+        android:icon="@android:drawable/ic_menu_save"
+        android:title="Zapisz"/>
+     
     <item
-        android:id="@+id/menu_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/menu_settings"/>
+        android:id="@+id/menu_add"
+        android:showAsAction="collapseActionView"
+        android:icon="@android:drawable/ic_input_add"
+        android:title="Dodaj"/>
+    
+    <item
+        android:id="@+id/menu_delete"
+        android:showAsAction="collapseActionView"
+        android:icon="@android:drawable/ic_input_delete"
+        android:title="Usuń"/>
+    
+   
 
 </menu>
