--- a/WydatkiBase/res/layout/bottom_bar_object_list.xml
+++ b/WydatkiBase/res/layout/bottom_bar_object_list.xml
@@ -1,27 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/background_orange"
-    android:orientation="horizontal" >
+    android:background="@color/background_orange" >
 
-    <ImageButton
-        android:id="@+id/imageButton3"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_menu_manage" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="5dp"
+        android:orientation="horizontal" >
+
+        <ImageButton
+            android:id="@+id/actionbar_btn_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_manage" />
+
+        <ImageButton
+            android:id="@+id/actionbar_btn_lock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="Opis"
+            android:src="@android:drawable/ic_lock_lock" />
+
+        <ImageButton
+            android:id="@+id/actionbar_btn_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_delete" />
+    </LinearLayout>
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/actionbar_btn_returnSelected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="Opis"
-        android:src="@android:drawable/ic_lock_lock" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="5dp"
+        android:src="@android:drawable/ic_menu_set_as" />
 
-    <ImageButton
-        android:id="@+id/imageButton1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_menu_delete" />
-
-</LinearLayout>
+</RelativeLayout>
