--- a/WydatkiBase/res/layout/row_control_view.xml
+++ b/WydatkiBase/res/layout/row_control_view.xml
@@ -4,5 +4,29 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
+    <RelativeLayout
+        android:id="@+id/relativeLayout1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/control_row_view_content_textview"
+            style="@style/Style_TextWithShadow"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:gravity="center_horizontal"
+            android:text="@string/get_more_data"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <ProgressBar
+            android:id="@+id/control_row_view_progress_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true" />
+
+    </RelativeLayout>
 
 </LinearLayout>
