Obsługa operacji na listach

--- a/WydatkiBase/res/color/btn_blue.xml
+++ b/WydatkiBase/res/color/btn_blue.xml
@@ -6,5 +6,7 @@
           android:state_pressed="true" />
     <item android:drawable="@drawable/btn_one_pressed"
           android:state_focused="true" />
+    <item android:drawable="@drawable/btn_one_disable"
+          android:state_enabled="false"/>
     <item android:drawable="@drawable/btn_one_normal" />
 </selector>
