--- a/WydatkiBase/res/layout/row_account_layout.xml
+++ b/WydatkiBase/res/layout/row_account_layout.xml
@@ -2,9 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:paddingBottom="8dp"
-    android:paddingTop="8dp" >
+    android:orientation="horizontal" >
 
 <LinearLayout
         android:layout_width="wrap_content"
