--- a/WydatkiPhone/res/layout/edit_element_activity_layout.xml
+++ b/WydatkiPhone/res/layout/edit_element_activity_layout.xml
@@ -6,6 +6,7 @@
     android:orientation="horizontal" >
 
     <FrameLayout android:id="@+id/details" android:layout_weight="1"
-            android:layout_width="0px" android:layout_height="match_parent" />
+            android:layout_width="0px" android:layout_height="match_parent" >
+    </FrameLayout>
 
 </LinearLayout>
