--- a/WydatkiBase/res/layout/fragment_transactions_list.xml
+++ b/WydatkiBase/res/layout/fragment_transactions_list.xml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
+
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/bottom_actionbar"
+        android:layout_below="@+id/btn_add_new"
         android:cacheColorHint="@android:color/transparent" >
 
     </ListView>
 
-</LinearLayout>
+    <include
+        android:id="@+id/bottom_actionbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        layout="@layout/bottom_bar_object_list"
+        android:visibility="gone" />
+
+
+</RelativeLayout>
