--- a/WydatkiBase/res/layout/row_property_layout.xml
+++ b/WydatkiBase/res/layout/row_property_layout.xml
@@ -6,22 +6,10 @@
     android:minHeight="48dp"
     android:orientation="horizontal" >
 
-    <LinearLayout
+    <include
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="@color/yellow"
-        android:minWidth="4dp"
-        android:orientation="horizontal" >
-
-        <CheckBox
-            android:id="@+id/row_cbx_selected"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:visibility="gone" />
-    </LinearLayout>
+        layout="@layout/external_check_box" />
 
     <ImageView
         android:id="@+id/row_parameter_lock"
