--- a/WydatkiBase/res/layout/external_check_box.xml
+++ b/WydatkiBase/res/layout/external_check_box.xml
@@ -8,6 +8,8 @@
         android:id="@+id/RelativeLayout1"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginBottom="1dp"
+        android:layout_marginTop="1dp"
         android:background="@color/yellow"
         android:minWidth="4dp"
         android:orientation="horizontal" >
